[project]
name = "panda-downloader"
version = "2.0.0"
description = "Interactive YouTube video and playlist downloader"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Vishnudas-bluefox", email = "vishnudas@users.noreply.github.com" }]
keywords = ["youtube", "downloader", "cli", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp>=2024.1.0",
]

[project.scripts]
panda = "panda_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/vishnudas-bluefox/panda-downloader"
Repository = "https://github.com/vishnudas-bluefox/panda-downloader"
Issues = "https://github.com/vishnudas-bluefox/panda-downloader/issues"
Changelog = "https://github.com/vishnudas-bluefox/panda-downloader/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["panda_downloader"]
